lifeguard-derive/tests/ui/compile_error_partial_model_consecutive_colons.stderr
error: Entity path has consecutive colons. Found empty segment at position 2 in #[lifeguard(entity = "users::::Entity")]. Use a valid path like "foo::Entity" or "Entity".
 --> tests/ui/compile_error_partial_model_consecutive_colons.rs:6:1
  |
6 | #[derive(DerivePartialModel)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
